<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/img_logon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/add_info"
            android:id="@+id/textView8"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal" />

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                style="@style/_edit_text_login_appearance"
                android:drawableStart="@drawable/ic_map"
                android:drawableLeft="@drawable/ic_map"
                android:inputType="number"
                android:hint="@string/building_number" />

            <EditText
                style="@style/_edit_text_login_appearance"
                android:inputType="textPersonName"
                android:drawableStart="@drawable/ic_user"
                android:drawableLeft="@drawable/ic_user"
                android:hint="@string/user_name" />

            <EditText
                style="@style/_edit_text_login_appearance"
                android:drawableStart="@drawable/ic_key"
                android:drawableLeft="@drawable/ic_key"
                android:inputType="textPassword|textVisiblePassword"
                android:hint="@string/password"
             />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/remember_stuff"
                android:id="@+id/checkBox"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:checked="true"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:id="@+id/button4"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@android:color/white" />

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:id="@+id/imageView7"
                android:background="@color/colorAccent"
                android:layout_marginTop="@dimen/activity_horizontal_margin" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/forgot_pw"
                    android:textColor="@color/colorAccent"
                    android:gravity="start|left"
                    android:layout_margin="@dimen/activity_horizontal_margin"/>


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end|right"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/forgot_user_name"
                    android:textColor="@color/colorAccent"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    />

            </LinearLayout>



        </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>